# VAST

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  DC17_VoidFinder.py  DESI_void_mock_0_voidfinder.py  DESI_void_mock_1_voidfinder.py  DESI_void_mock_2_voidfinder.py  LICENSE  MANIFEST.in  Note.txt  README.md  SDSS_VoidFinder.py  VoidFinder.py  absmag_comovingdist_functions.py  avsepcalc.py  classifyEnvironment.py  clean.sh  hole_combine.py  hole_grow.py  mag_cutoff_function.py  multizmask.py  pyproject.toml  requirements.txt  setup.py  table_functions.py  vflag.py  voidfinder.py  voidfinder_functions.py  voids_sdss.py  volume_cut.py
.circleci/: config.yml
.github/workflows/: publish.yml  tests.yaml  tests.yml
Documentation/: paper.bib  paper.md
Documentation/source/: V2.rst  VoidFinder.rst  VoidFinder_examples.rst  VoidFinder_functions.rst  VoidFinder_intro.rst  VoidRender.rst  VoidRender_examples.rst  Vsquared_examples.rst  Vsquared_functions.rst  Vsquared_intro.rst  conf.py  index.rst  requirements.txt
VoidFinder/: MANIFEST.in  README.md  requirements.txt  setup.py
VoidFinder/legacy/: README.md  dist.f  indexx.f  ran3.f  sort_4.f  voids_sdss.cpp  (+1 more)
Vsquared/: README  README.md  requirements.txt  setup.py
doc/: paper.bib  paper.md
example_scripts/: DR7_config.ini  Gadget_VoidFinder_100_256.py  Gadget_VoidFinder_periodic.py  Gadget_VoidFinder_xyz.py  SDSS_VoidFinder_dr7.py  SDSS_VoidFinder_dr7_xyz.py  classifyEnvironment.py  visualize_voids_V2.py  visualize_voids_VoidFinder.py  void_analysis.ipynb  vollim_dr7_cbp_102709.fits  vsquared.py
zobov/: zobov.py
(+357 files in other folders)
